ingridient <ul> has been added

--- a/Recipes/Mofongo.html
+++ b/Recipes/Mofongo.html
@@ -20,12 +20,23 @@
     <li>cooking oil</li>
     <li>head of lettuce</li>
     <li>vinegar</li>
+    <li>Flour</li>
 
   </ul>
   <h2>Steps</h2>
   <ol>
-    <li>grab your platains and peel them and chop it </li>
-
+    <li>grab your platains and peel them and chop them into round plantains</li>
+    <li> while your chopping your plantains grab a pot and put 2 cups of cooking oil </li>
+    <li> grab your chicken breast and  slice them into strips</li>
+    <li> turn on your oit with cooking oil</li>
+    <li>grab your adobo seasoning and pour a genrous amount onto the chiken breast</li>
+    <li> grab your flour and mix in you chicken breast</li>
+    <li> put the plaintains in the pot for about 5 minutes until they are nice and dark yellow</li>
+    <li>take out your platains and plcae your chiekcen breast in until theyr golden brown</li>
+    <li> then grabl a steel bowl  and place you plantains in </li>
+    <li>grab a couple chunks of your chicken breast and cut them into tiny peaces, then place them in the bowl</li>
+    <li>smash the plantains and chicken in the bowl</li>
+  
   </ol>
 </body>
 </html>
