--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="Recipes/Mofongo.html">Mofongo Recipe</a>
+    <a href="Recipes/lasagna.html">Lasagna recipe</a>
 
   </body>
 </html>
