added the final <a> in the file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <a href="Recipes/Mofongo.html">Mofongo Recipe</a>
     <a href="Recipes/lasagna.html">Lasagna recipe</a>
+    <a href="Recipes/brownies.html">Brownie Recipes</a>
 
   </body>
 </html>
